--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "mocha": "^2.4.5"
+  },
+  "dependencies": {
+    "amdefine": "^1.0.0",
+    "requirejs": "^2.2.0"
   }
 }
